# Jetson-Nano-Experiments

./: .gitignore  32_servo_tracking.py  32_servo_tracking_pwm.py  README.md  deep_learning_object_detection.py  depth_filters.ipynb  discover_people.py  distance_to_object.ipynb  follow_person.py  greenscreen.ipynb  greenscreen.py  pyproject.toml  real_time_object_detection.py  test.py
