[tool.poetry]
name = "depth_filters"
version = "0.1.0"
description = ""
authors = ["Stuart Leitch <toruitas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyrealsense2 = "^2.32.1"
numpy = "^1.18.1"
matplotlib = "^3.1.3"
torch = "^1.4.0"
torchvision = "^0.5.0"
opencv-python = "^4.2.0"
jupyter = "^1.0.0"
jupyterlab = "^2.0.0"
numba = "^0.48.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
